<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:columnCount="4"
    android:orientation="vertical"
    android:id="@+id/bb"
    android:paddingTop="10dp"
    android:paddingBottom="20dp">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07"
        android:paddingLeft="3dp"
        android:paddingRight="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="81dp"
            android:id="@+id/textView"

            android:background="#ff989d9d"
            android:textColor="#ff010101"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:textSize="28sp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">


            <Button
                android:text="@string/cancel_label"
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1" />

            <Button android:text="@string/product_label"

                android:id="@+id/multiply"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <Button android:text="@string/seven_label"

            android:id="@+id/seven"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_width="wrap_content" />

        <Button android:text="@string/eight_label"

            android:id="@+id/eight"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_width="wrap_content" />

        <Button android:text="@string/nine_label"

            android:id="@+id/nine"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_width="wrap_content" />

        <Button android:text="@string/divide_label"
            android:id="@+id/divide"

            android:layout_gravity="fill"

            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_width="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <Button android:text="@string/four_label"

            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4" />

        <Button android:text="@string/five_label"

            android:id="@+id/five"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_weight="4" />

        <Button android:text="@string/six_label"

            android:id="@+id/six"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_weight="4" />

        <Button android:text="@string/subtr_label"

            android:id="@+id/subtract"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_weight="4" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0">

        <Button android:text="@string/one_label"

            android:id="@+id/one"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_width="wrap_content" />

        <Button android:text="@string/two"
            android:id="@+id/two"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_width="wrap_content" />

        <Button android:text="@string/three"

            android:id="@+id/three"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_width="wrap_content" />

        <Button android:text="@string/add_label"

            android:id="@+id/add"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_width="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2">

        <Button android:text="@string/decimal"
            android:id="@+id/decimal"

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="2" />

        <Button android:text="@string/zero"
            android:id="@+id/zero"

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="2" />

        <Button android:text="@string/equal_sign"
            android:id="@+id/equals"

            android:layout_gravity="fill_vertical"

            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_width="wrap_content" />
    </LinearLayout>


</LinearLayout>

